package org.ulysse.collabtaskapp;

public class KanbanBoard {
}
