package org.ulysse.collabtaskapp;

public class Report {
    
}
